# gitrending-bot-tabnews

./: .env.local  README.md  pyproject.toml  requirements.txt  run.py
src/: bot.py
