[tool.poetry]
name = "gitrending-bot-tabnews"
version = "0.1.0"
description = ""
authors = ["iorjunior <juniorcoda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
